add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Flip A Table</title>
     <script src="script.js"></script>
     <link type="text/css" rel="stylesheet" href="style.css">
