--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id = "emote-container"></div>
-    <form id = "builder-form">
-    </form>
+	<div id = "builder-container">
+		<h1>Flip a table in a rage!</h1>
+  		<div id = "emote-container"></div>
+  		<form id = "builder-form">
+  		</form>
+	</div>
 </body>
 </html>
