--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   		<div id = "emote-container"></div>
   		<form id = "builder-form">
   		</form>
+
+		<p>A project by <a href="http://cfseanor.com">Clark Seanor</a></p>
 	</div>
 </body>
 </html>
